# polaris

./: .gitignore  NOTICE  README.md  andrew_upload_test.py  changelog_config.json  env.yml  mkdocs.yml  package-lock.json  pyproject.toml  t.py  test.roaring  testing.py  training.roaring  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  changelog_config.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  default-template.md  feature-request.md
.github/workflows/: code-check.yml  doc.yml  release.yml  test.yml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/search/: search_index.json
0.0.2/: 404.html  index.html  quickstart.html  sitemap.xml
0.0.2/api/: base.html  benchmark.html  dataset.html  evaluation.html  hub.client.html  subset.html  utils.types.html
0.0.2/community/: community.html
0.0.2/search/: search_index.json
0.0.2/tutorials/: basics.html  custom_dataset_benchmark.html  data_curation.html  dataset_zarr.html
0.1.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.1.0/api/: base.html  benchmark.html  dataset.html  evaluation.html  hub.client.html  subset.html  utils.types.html
0.1.0/community/: community.html
0.1.0/tutorials/: basics.html  custom_dataset_benchmark.html  data_curation.html  dataset_zarr.html
0.10.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.10.0/api/: adapters.html  base.html  benchmark.html  competition.dataset.html  competition.evaluation.html  competition.html  converters.html  dataset.html  evaluation.html  factory.html  hub.client.html  hub.external_client.html  hub.polarisfs.html  hub.storage.html  load.html  subset.html  utils.types.html
0.10.0/community/: community.html
0.10.0/tutorials/: basics.html  competition.participate.html  custom_dataset_benchmark.html  dataset_pdb.html  dataset_sdf.html  dataset_zarr.html  optimization.html
0.11.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.11.0/api/: adapters.html  base.html  benchmark.html  competition.evaluation.html  competition.html  converters.html  dataset.html  evaluation.html  factory.html  hub.client.html  hub.external_client.html  (+5 more)
0.11.1/: 404.html  index.html  quickstart.html  sitemap.xml
0.11.10/: 404.html  index.html  quickstart.html  resources.html  sitemap.xml
0.11.2/: 404.html  index.html  quickstart.html  sitemap.xml
0.11.3/: 404.html  index.html  quickstart.html  sitemap.xml
0.11.4/: 404.html  index.html  quickstart.html  sitemap.xml
0.11.5/: 404.html  index.html  quickstart.html  sitemap.xml
0.11.6/: 404.html  index.html  quickstart.html  sitemap.xml
0.11.7/: 404.html  index.html  quickstart.html  sitemap.xml
0.11.8/: 404.html  index.html  objects.inv  quickstart.html  resources.html  sitemap.xml
0.11.9/: 404.html  index.html  quickstart.html  resources.html  sitemap.xml
0.12.0/: 404.html  index.html  quickstart.html  resources.html  sitemap.xml
0.12.1/: 404.html  index.html  quickstart.html  resources.html  sitemap.xml
0.13.0/: 404.html  index.html  quickstart.html  resources.html  sitemap.xml
0.2.0/: 404.html  index.html  objects.inv  quickstart.html  sitemap.xml
0.2.1/: 404.html  index.html  quickstart.html  sitemap.xml
0.2.2/: 404.html  index.html  objects.inv  quickstart.html  sitemap.xml
0.2.3/: 404.html  index.html  quickstart.html  sitemap.xml
0.2.4/: 404.html  index.html  quickstart.html  sitemap.xml
0.2.5/: 404.html  index.html  quickstart.html  sitemap.xml
0.2.6/: 404.html  index.html  quickstart.html  sitemap.xml
0.3.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.4.1/: 404.html  index.html  objects.inv  quickstart.html  sitemap.xml
0.5.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.5.1/: 404.html  index.html  quickstart.html  sitemap.xml
0.6.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.1/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.2/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.3/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.4/: 404.html  index.html  objects.inv  quickstart.html  sitemap.xml
0.7.5/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.6/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.7/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.8/: 404.html  index.html  quickstart.html  sitemap.xml
0.7.9/: 404.html  index.html  quickstart.html  sitemap.xml
0.8.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.8.1/: 404.html  index.html  quickstart.html  sitemap.xml
0.8.2/: 404.html  index.html  quickstart.html  sitemap.xml
0.8.3/: 404.html  index.html  quickstart.html  sitemap.xml
0.8.4/: 404.html  index.html  quickstart.html  sitemap.xml
0.8.5/: 404.html  index.html  objects.inv  quickstart.html  sitemap.xml
0.8.6/: 404.html  index.html  objects.inv  quickstart.html  sitemap.xml
0.9.0/: 404.html  index.html  quickstart.html  sitemap.xml
0.9.1/: 404.html  index.html  quickstart.html  sitemap.xml
0.9.2/: 404.html  index.html  objects.inv  quickstart.html  sitemap.xml
0.9.3/: 404.html  index.html  quickstart.html  sitemap.xml
docs/: index.md  quickstart.md  resources.md
main/: 404.html  index.html  objects.inv  quickstart.html  resources.html  sitemap.xml
notebooks/: 01_data_curation.ipynb  02_Kinase_curation.ipynb
polaris/: __init__.py  _artifact.py  _mixins.py  _version.py  cli.py
stable/: 404.html  index.html  objects.inv  quickstart.html  resources.html  sitemap.xml
tests/: conftest.py  test_benchmark.py  test_benchmark_predictions.py  test_benchmark_predictions_v2.py  test_benchmark_v2.py  test_codecs.py  test_competition.py  test_curation.py  test_dataset.py  test_dataset_iterator.py  test_dataset_v2.py  test_evaluate.py  test_factory.py  test_hub_integration.py  test_import.py  test_integration.py  test_iterator.py  test_logging.py  test_metrics.py  test_oauth.py  test_predictions.py  test_splits_integration.py  test_storage.py  test_subset.py  test_task.py  test_to_zarr_converters.py  test_type_checks.py  test_zarr_checksum.py
(+1240 files in other folders)
